selfhost/test/typechecker/binary/eq_error.2.out
Error at %FILE_NAME%:1:5
Illegal operator
  |  123 == None
         ^
No operator '==' exists between types Int and Int?
